- Fixed bug #52668 (Iterating over a dateperiod twice is broken).